--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,3 +19,62 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#top {
+  position: relative;
+}
+
+#top::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0000005e;
+  z-index: 1;
+  background-repeat: repeat;
+  background-size: auto;
+}
+
+#top h2,
+#top p,
+#top .cotizador {
+  position: relative;
+  z-index: 2;
+}
+
+.hero-text {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #026b29;
+  transform: scale(1.05);
+  transition: 0.3s ease;
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.title-font-principal {
+  font-family: font-libre-baskerville, serif;
+}
+
+.font-libre-baskerville.font-libre-baskerville {
+  font-family: 'Libre Baskerville', serif !important;
+}
+
+.text-morado {
+  color: #312387;
+}
+
+.bg-morado {
+  background-color: #312387;
+}
